Fix contrast error

--- a/css/small.css
+++ b/css/small.css
@@ -126,7 +126,7 @@ nav ul.hide {
 .motto {
     font-style: italic;
     letter-spacing: 1pt;
-    color: #243E36;
+    color: #1E382F;
     margin-left: 20px;
     font-size: .9rem;
 }
